Fixed image being cropped from the bottom

--- a/src/components/imageItem/snapImageStyles.css
+++ b/src/components/imageItem/snapImageStyles.css
@@ -13,7 +13,7 @@ display: inline-block;
     font-style: italic;
 }
 .snap-item span{
-    height: 100%;
+    height: 97%;
     width: 100%;
 }
 @media only screen and (max-width:850px){
